--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs"
+  message: "Welcome to EazyBank accounts related locall APIs"
   contactDetails:
     name: "Product Owner"
     email: "john@Eazybank.com"
